Bug 316887 - Enabling/disabling plugins (config change) not taking effect right away
Summary: Enabling/disabling plugins (config change) not taking effect right away
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: git-latest
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-17 08:15 UTC by Stefan Eggers
Modified: 2013-05-15 13:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Eggers 2013-03-17 08:15:24 UTC
Changing the enabled state of a plugin in ktp-text-ui does not have an effect right away. Tested with the highlight plugin.

Reproducible: Always

Steps to Reproduce:
1. open ktp-text-ui
2. in settings disable the highlight plugin
3. in settings make sure there is a notification for highlight set
3. close ktp-text-ui
4. open ktp-text-ui with someone
5. let this same someone send you something with your nick in it
6. observe that no notification appears
7. in settings enable the hightlight plugin
8. repeat step 5
Actual Results:  
no notification appearing

Expected Results:  
notification should appear as the text to highlight was found

After ktp-text-ui starts next time the plugin will be in effect. Seems to be similar to bug 316004.
Comment 1 David Edmundson 2013-03-17 14:11:13 UTC
Confirming.

Would be useful to read what kwin and others do to solve this plugin loading. I don't want to delete and recreate all the plugins each time the config changes.

MessageProcessor is a singleton so that should make things fairly easy to modify.
Comment 2 Daniel Vrátil 2013-05-15 13:10:26 UTC
Git commit f2ca5230a91d5e308cbfabc4464d2639ac200b60 by Dan Vrátil.
Committed on 15/05/2013 at 15:08.
Pushed by dvratil into branch 'master'.

Allow dynamic loading and unloading of text filters

The code now also allows running filters before the default
escape filter.
Related: bug 305997
FIXED-IN: 0.7.0

M  +19   -0    KTp/message-filter-config-manager.cpp
M  +2    -0    KTp/message-filter-config-manager.h
A  +53   -0    KTp/message-processor-private.h     [License: LGPL (v2.1+)]
M  +71   -48   KTp/message-processor.cpp
M  +1    -0    KTp/message-processor.h

http://commits.kde.org/telepathy-common-internals/f2ca5230a91d5e308cbfabc4464d2639ac200b60
Comment 3 Daniel Vrátil 2013-05-15 13:11:43 UTC
Git commit b3d3f27d5000d05a1e179f8f162f2afba2c76a3d by Dan Vrátil.
Committed on 15/05/2013 at 15:11.
Pushed by dvratil into branch 'master'.

Reload plugins immediatelly when config is saved
FIXED-IN: 0.7.0
REVIEW: 110440

M  +7    -0    config/messages-config.cpp
M  +1    -0    config/messages-config.h

http://commits.kde.org/telepathy-text-ui/b3d3f27d5000d05a1e179f8f162f2afba2c76a3d