Reload plugins immediatelly when config is saved

BUG: 316887
FIXED-IN: 0.7.0
REVIEW: 110440